# bottlerocket-settings-sdk

./: Cargo.toml
bottlerocket-settings-derive/: Cargo.toml
bottlerocket-settings-derive/src/: lib.rs
bottlerocket-settings-plugin/: Cargo.toml
bottlerocket-settings-plugin/src/: lib.rs  settings.rs
bottlerocket-settings-plugins/opaque-derive/: Cargo.toml
bottlerocket-settings-plugins/opaque-derive/src/: lib.rs
bottlerocket-settings-plugins/opaque-settings/: Cargo.toml
bottlerocket-settings-plugins/opaque-settings/src/: lib.rs  opaque.rs  prelude.rs
bottlerocket-settings-sdk/: Cargo.toml
bottlerocket-settings-sdk/derive/: Cargo.toml
bottlerocket-settings-sdk/derive/src/: lib.rs
bottlerocket-settings-sdk/src/: lib.rs
bottlerocket-settings-sdk/tests/colliding_versions/: mod.rs
