[package]
name = "bottlerocket-settings-plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
abi_stable = "0.11.3"
lazy_static = "1.4.0"
serde = "1.0.198"
serde_json = { version = "1.0.116", features = ["raw_value"] }
bottlerocket-settings-derive = { version = "0.1.0", path = "../bottlerocket-settings-derive" }
